woost/views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .Form label {
    display: block;
    padding-bottom: 0.2em;
}

.BackOfficeLayout .Form label .language {
    color: rgb(75,75,75);
    font-style: italic;
    font-size: 75%;
    margin-left: 0.5em;
}

.BackOfficeLayout .Form .required_mark {
    font-weight: bold;
    color: rgb(100,125,150);
    padding-left: 0.3em;
}

.BackOfficeLayout .Form .field_instance-HiddenInput {
    display: none;
}

.BackOfficeLayout .Form .field_instance-CheckBox label {
    display: inline;
}

.BackOfficeLayout .Form .field_instance-CheckBox input {
    width: auto !important;
    margin-left: 0;
    margin-right: 0.4em;
}

.BackOfficeLayout .Form .control,
.BackOfficeLayout .Form .field_instance-DatePicker .time  {
    font-size: 90%;
}

.BackOfficeLayout .Form td .control,
.BackOfficeLayout .Form td .mceEditor .mceLayout,
.BackOfficeLayout .Form td .ItemSelector button {
    width: 100%;
}

.BackOfficeLayout .Form td .DatePicker {
    width: 8em;
    margin-right: 0.5em;
}

.BackOfficeLayout .ui-datepicker-trigger {
    margin-left: 0.3em;
    vertical-align: middle;
}

.BackOfficeLayout .DatePicker,
.BackOfficeLayout .field_instance .DatePicker.control {
    width: 8em;
}

.field_instance-DatePicker .time {
    margin-left: 0.9em;
    width: 6em;
}

/* Tables
-----------------------------------------------------------------------------*/

body.scripted .BackOfficeLayout .Table .selection {
    display: none;
}

.BackOfficeLayout .Table .target_focus {
    position: absolute;
    left: -1000px;
}

.BackOfficeLayout .Table,
.BackOfficeLayout .PropertyTable {
	clear: both;
    border-collapse: collapse;
    width: 100%;
}

.BackOfficeLayout .Table {
    border: 1px solid #eee;
}

.BackOfficeLayout .PropertyTable th {
    width: 25%;
}

.BackOfficeLayout .PropertyTable tr.group_header th {
    font-weight: bold;
}

.BackOfficeLayout .PropertyTable tbody + tbody tr.group_header th {
    padding-top: 2em;
}

.BackOfficeLayout .PropertyTable tr.member_row th {
    padding-left: 2em;
}

.BackOfficeLayout .Table th {
    border: 1px solid rgb(200,205,212);
}

.BackOfficeLayout .Table th a {
    text-decoration: none;
}

.BackOfficeLayout .Table th {
    background-position: bottom left;
    background-repeat: repeat-x;
    background-image: url(../images/header.png);
    background-color: rgb(220,223,227);
}

.BackOfficeLayout .ContentTable td,
.BackOfficeLayout .ContentTable td * {
    cursor: default;
}

.BackOfficeLayout .ContentTable .ItemLabel {
    display: inline-block;
}

.BackOfficeLayout .ContentTable th .selector > .label {
    background-position: right 0.5em;
    white-space: nowrap;
}

.BackOfficeLayout .ContentTable th .selector_content > div + div {
    margin-top: 1.2em;
}

.BackOfficeLayout .ContentTable th .selector_content > div > a + a {
    margin-top: 0.4em;
}

.BackOfficeLayout .ContentTable th .selector_content > div > a {
    display: block;
    background-repeat: no-repeat;
    background-position: 0 -2px;
    padding-left: 18px;
}

.BackOfficeLayout .ContentTable th .selector_content {
    top: 1.4em;
    font-size: 85%;
    padding-right: 1em;
    padding-top: 1em;
    min-width: 12em;
}

.BackOfficeLayout .ContentTable .sorting_options a.selected {
    font-weight: bold;
}

.BackOfficeLayout .ContentTable .sorting_options .ascending {
    background-image: url(../images/ascending.png);
    _background-position:0 -2px;
    _background-repeat:no-repeat;
    _display:block;
    _padding-left:18px; 
}

.BackOfficeLayout .ContentTable .sorting_options .descending {
    background-image: url(../images/descending.png);
    _background-position:0 -2px;
    _background-repeat:no-repeat;
    _display:block;
    _padding-left:18px; 
}

.BackOfficeLayout .ContentTable .search_options .add_filter {
    background-image: url(../images/add.png);
    _background-position:0 -2px;
    _background-repeat:no-repeat;
    _display:block;
    _padding-left:18px;    
}

.BackOfficeLayout .PropertyTable th {
    text-align: left;
    font-weight: normal;
}

.BackOfficeLayout .PropertyTable table.translated_values th {
    padding-left: 0;
    width: 8em;
    color: rgb(70,70,70);
}

.BackOfficeLayout .PropertyTable .type_header th {
    font-weight: bold;
    color: rgb(50,50,50);
    background-image: url(../images/expanded_block.png);
    background-repeat: no-repeat;
    background-position: 0.3em center;
    padding-left: 1.5em;
    cursor: pointer;
}

.BackOfficeLayout .PropertyTable .type_group.collapsed .type_header th {
    background-image: url(../images/collapsed_block.png);
    background-position: 0.6em center;
}

.BackOfficeLayout .PropertyTable .type_group.collapsed tbody {
    display: none;
}

.BackOfficeLayout .PropertyTable .member_entry th {
    width: 18em;
    padding-left: 2.4em;
}

.BackOfficeLayout .Table th, .BackOfficeLayout .Table th * {
    font-weight: normal;
    color: black;
}

.BackOfficeLayout .Table th span.label {
    color: rgb(75,75,75);
}

.BackOfficeLayout .Table th,
.BackOfficeLayout .Table td,
.BackOfficeLayout .PropertyTable th,
.BackOfficeLayout .PropertyTable td {
    vertical-align: top;
	text-align: left;
	padding: 0.5em;
    font-size: 85%;
}

.BackOfficeLayout .ContentTable ul,
.BackOfficeLayout .PropertyTable ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
    list-style-position: inside;
}

.BackOfficeLayout .ContentTable li,
.BackOfficeLayout .PropertyTable li {
    padding: 0;
    margin: 0;
}

.BackOfficeLayout .ContentTable ul ul,
.BackOfficeLayout .PropertyTable ul ul {
    padding-left: 2em;
}

.BackOfficeLayout .ContentTable li,
.BackOfficeLayout .PropertyTable li {
    margin-bottom: 0.5em;
}

/*.Table tr.translations th {*/
.BackOfficeLayout .Table th .translation {
    margin-left: 0.5em;
    font-size: 80%;
    font-weight: normal;
    font-style: italic;
    color: rgb(75,75,75);
    padding-top: 0;
}

.BackOfficeLayout .Table .selection {
    width: 1.5em;
    padding-right: 0;
}
/* ... */

